[workspace]
members = [
    "programs/merkle-distributor",
    "programs/govern",
    "programs/smart-wallet",
    "programs/voter",
    "cli/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
